err/pyradiodns.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/dns'...
Listing './lib/python3.5/site-packages/dns/rdtypes'...
Listing './lib/python3.5/site-packages/dns/rdtypes/ANY'...
Listing './lib/python3.5/site-packages/dns/rdtypes/IN'...
Listing './lib/python3.5/site-packages/dnspython-1.15.0.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyradiodns'...
Listing './lib/python3.5/site-packages/pyradiodns/radiodns'...
Compiling './lib/python3.5/site-packages/pyradiodns/radiodns/am_service.py'...
***   File "./lib/python3.5/site-packages/pyradiodns/radiodns/am_service.py", line 14
    print 'Invalid type value. Must be either \'drm\' (Digital Radio Mondiale) or \'amss\' (AM Signalling System).'
                                                                                                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyradiodns/radiodns/dab_service.py'...
***   File "./lib/python3.5/site-packages/pyradiodns/radiodns/dab_service.py", line 52
    print 'Invalid data value. Must be either a valid X-PAD Applicaton Type (AppTy) and User Applicaton type (UAtype) hexadecimal or Packet Address integer.'
                                                                                                                                                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyradiodns/radiodns/fm_service.py'...
***   File "./lib/python3.5/site-packages/pyradiodns/radiodns/fm_service.py", line 19
    print 'Invalid country value. Must be either a ISO 3166-1 alpha-2 country code or valid hexadecimal value of a RDS Country Code concatanated with a RDS Extended Country Code (ECC).'
                                                                                                                                                                                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyradiodns/radiodns/hd_service.py'...
***   File "./lib/python3.5/site-packages/pyradiodns/radiodns/hd_service.py", line 14
    print 'Invalid type value. Must be either \'drm\' (Digital Radio Mondiale) or \'amss\' (AM Signalling System).'
                                                                                                                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyradiodns-0.1.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
